Changed gutter size to zero and fixed invisible margin on img

--- a/assets/sass/base/_media.scss
+++ b/assets/sass/base/_media.scss
@@ -18,6 +18,7 @@
 img {
 	height: auto;
 	max-width: 100%;
+	display: block;
 }
 
 // Captions
