--- a/assets/sass/modules/_content.scss
+++ b/assets/sass/modules/_content.scss
@@ -12,9 +12,9 @@
 	display: block;
 }
 
-.hentry {
-	margin: 0 0 rem(24) 0;
-}
+// .hentry {
+// 	margin: 0 0 rem(24) 0;
+// }
 
 .byline,
 .updated:not(.published) {
